        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.11   **
        **                                          **
        **         In development, unstable         **
        **                                          **
        **********************************************

NEW FEATURES

  o  fread can now understand commands, e.g. fread("grep blah file.txt").

  o  fread's integer64 argument implemented. Allows reading of integer64 data as 'double' or 'character'
     instead of bit64::integer64 (which remains the default as before). Thanks to Chris Neff for the
     suggestion. The default can be changed globally; e.g, options(datatable.integer64="character")
     
  o  fread's drop, select and NULL in colClasses are implemented. To drop or select columns by name
     or by number. See examples in ?fread.
     
  o  fread now detects T,F,True,False,TRUE and FALSE as type logical, consistent with read.csv.
  
  o  fread("1.46761e-313\n") detected the ERANGE error, so read as character. It now reads as
     numeric but with a detailed warning. Thanks to Heather Turner for the detailed report, #4879.
	 
  o	 as.data.table method for table() implemented, #4848. Thanks to Frank Pinter for suggesting :
       http://stackoverflow.com/questions/18390947/data-table-of-table-is-very-different-from-data-frame-of-table
  
  o  as.data.table methods added for integer, numeric, character, logical, factor, ordered and Date.

  o  data.table now imports 'reshape2' and implements a faster S3 method 'melt.data.table' for 
     performing melt operations on data.table, by extending reshape2:::melt. This takes care 
	 of FR #2627 partially. For example, a benchmark test on 1e7*5 data took 1.25 seconds 
	 for melt.data.table vs 90 seconds from reshape2:::melt.data.frame. Most settings are 